--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,14 +4,18 @@
 }
 
 .fundo{
-    background-image: linear-gradient(45deg,black, crimson);
+    background-image: linear-gradient(45deg,black, blue);
     height: 100vh;
     color: white;
 }
 
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .calculadora{
     position: absolute;
-    background-color: black;
+    background-color: pink;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
